tests/samples/negative/generics/generic_struct_invalid_storage.ax
module generic_struct_invalid_storage;

struct Bad<T> {
    value: void;
}

fn main() -> i32 {
    let value: *mut Bad<i32> = null;
    return 0;
}
